...
    <string name="profile">Profile</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="remove">Remove</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
    <string name="duplicate">Duplicate</string>
    <string name="clear">Clear</string>
...
    <string name="login_signup_email">Enter your email</string>
    <string name="login_password">Enter your password</string>
    <string name="login">Sign in</string>
    <string name="forgotten_password">Did you forget the password? Click here</string>
    <string name="login_google">Sign in with Google</string>
    <string name="login_signup">Don\'t have an account? Sign up</string>
    <string name="signup_name">Enter your full name</string>
    <string name="signup_password">Create a password</string>
    <string name="signup_password_confirm">Confirm your password</string>
    <string name="signup">Sign up</string>
    <string name="signup_login">Already have an account? Sign in</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
...
    <string name="expenses_budget">Expense on budget</string>
    <string name="this_month">Expenses this month</string>
    <string name="this_year_next">Expenses this year</string>
    <string name="monthly_expenses">Monthly expenses</string>

    <string name="google_profile_picture">Google profile picture</string>
    <string name="avatar_position">Avatar %1$d of %2$d</string>

    <string name="use_dynamic_color">Dynamic colors</string>

    <string name="sign_up_provider">Signed up with Google</string>
    <string name="sign_up_email">Signed up with email</string>
    <string name="sign_up_google_email">Signed up\ with email and Google</string>
...

    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name</string>
    <string name="your_budget">Your budget</string>
    <string name="your_propic">Your profile picture</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="edit_propic">Select your profile picture</string>
    <string name="edit_full_name">Edit your full name</string>
    <string name="no_expenses">No expenses</string>
    <string name="no_incomes">No incomes</string>
    <string name="enter_your_budget">Enter your monthly budget</string>

    <string name="annual_budget">Annual budget</string>
    <string name="incomes">Incomes</string>
...
